force-app/main/default/objects/Customer_Profile__c/fields/Reason_for_Hesitation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Hesitation__c</fullName>
    <inlineHelpText>This field captures the reason behind the customer&apos;s hesitance to get started.</inlineHelpText>
    <label>Reason for Hesitation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>