force-app/main/default/objects/Customer_Profile__c/fields/Reason_for_Sign_up__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Sign_up__c</fullName>
    <inlineHelpText>This field is populated by the agent during the initial consultation and hold information about why the customer registered for the given campaign.</inlineHelpText>
    <label>Reason for Sign-Up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>