force-app/main/default/objects/Customer_Profile__c/fields/Suggestions_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_for_Improvement__c</fullName>
    <label>Suggestions for Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>