force-app/main/default/objects/Customer_Profile__c/fields/Sum_of_Child_Age__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Child_Age__c</fullName>
    <description>This field is only used to create a formula field that calculates the average child age.</description>
    <label>Sum of Child Age</label>
    <summarizedField>Associated_Person__c.Age__c</summarizedField>
    <summaryForeignKey>Associated_Person__c.Customer_Profile__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>