force-app/main/default/objects/Customer_Profile__c/fields/Total_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Worth__c</fullName>
    <label>Total Net Worth</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>