force-app/main/default/objects/Customer_Profile__c/fields/Types_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Children__c</fullName>
    <label>Types of Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biological</fullName>
            </value>
            <value>
                <fullName>Blended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>