force-app/main/default/objects/Customer_Profile__c/fields/Undivided_Estate__c.field-meta.xml
<CustomField>
    <fullName>Undivided_Estate__c</fullName>
    <label>Undivided Estate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>