force-app/main/default/objects/Customer_Profile__c/fields/Wants_a_Prenup_to_Protect_Their_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Wants_a_Prenup_to_Protect_Their_Spouse__c</fullName>
    <label>Wants a Prenup to Protect Their Spouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>