force-app/main/default/objects/Customer_Profile__c/fields/Wants_General_Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Wants_General_Power_of_Attorney__c</fullName>
    <label>Wants General Power of Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>