force-app/main/default/objects/Customer_Profile__c/fields/Wants_Pension_Check__c.field-meta.xml
<CustomField>
    <fullName>Wants_Pension_Check__c</fullName>
    <label>Wants Pension Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>