force-app/main/default/objects/Customer_Profile__c/fields/Wants_Separate_Property_for_Their_Kids__c.field-meta.xml
<CustomField>
    <fullName>Wants_Separate_Property_for_Their_Kids__c</fullName>
    <label>Wants Separate Property for Their Kids</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>