force-app/main/default/objects/Customer_Profile__c/fields/Wants_to_Avoid_Inheritance_Tax__c.field-meta.xml
<CustomField>
    <fullName>Wants_to_Avoid_Inheritance_Tax__c</fullName>
    <label>Wants to Avoid Inheritance Tax</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>