force-app/main/default/objects/Customer_Profile__c/fields/Wants_to_Avoid_Partner_Payout_When_I_Die__c.field-meta.xml
<CustomField>
    <fullName>Wants_to_Avoid_Partner_Payout_When_I_Die__c</fullName>
    <label>Wants to Avoid Partner Payout When I Die</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>