force-app/main/default/objects/Customer_Profile__c/fields/Wants_to_Avoid_the_State_As_My_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Wants_to_Avoid_the_State_As_My_Guardian__c</fullName>
    <label>Wants to Avoid the State As My Guardian</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>