force-app/main/default/objects/Customer_Profile__c/fields/Youngest_Child__c.field-meta.xml
<CustomField>
    <fullName>Youngest_Child__c</fullName>
    <label>Youngest Child</label>
    <summarizedField>Associated_Person__c.Age__c</summarizedField>
    <summaryForeignKey>Associated_Person__c.Customer_Profile__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>