force-app/main/default/objects/Customer_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Person_1_First_Name__c</columns>
    <columns>Person_2_First_Name__c</columns>
    <columns>Number_of_Children__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/16/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>