force-app/main/default/objects/Customer_Profile__c/listViews/Customer_Profiles_with_Account.listView-meta.xml
<ListView>
    <fullName>Customer_Profiles_with_Account</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Person_1_First_Name__c</columns>
    <columns>Person_2_First_Name__c</columns>
    <columns>Number_of_Children__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Customer Profiles with Account</label>
</ListView>